<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/container_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_profile"
            style="@style/TextViewTitle"/>

        <LinearLayout
            style="@style/TextViewDivider">
        </LinearLayout>

        <ImageView
            android:id="@+id/imgProfile"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:src="@drawable/profile"
            android:contentDescription="@string/image_profile_description"
            android:layout_height="@dimen/profile_image_height" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:labelFor="@id/txtName"
                style="@style/LabelTextView"
                android:text="@string/label_name" />

            <TextView
                android:id="@+id/txtName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:contentDescription="@string/txt_name_description"
                style="@style/FormTextView"
                android:text="Pedro Lopes" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:labelFor="@id/txtYears"
                style="@style/LabelTextView"
                android:text="@string/label_years_old" />

            <TextView
                android:id="@+id/txtYears"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:contentDescription="@string/txt_year_description"
                style="@style/FormTextView"
                android:text="29" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:labelFor="@id/txtBirthday"
                style="@style/LabelTextView"
                android:text="@string/label_birthday" />

            <TextView
                android:id="@+id/txtBirthday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:contentDescription="@string/txt_birthday_description"
                style="@style/FormTextView"
                android:text="05/04/1989" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:labelFor="@id/txtPhone"
                style="@style/LabelTextView"
                android:text="@string/label_phone" />

            <TextView
                android:id="@+id/txtPhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:contentDescription="@string/txt_phone_description"
                style="@style/FormTextView"
                android:text="+55 21 979-146-458" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:labelFor="@id/txtEmail"
                style="@style/LabelTextView"
                android:text="@string/label_email" />

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:contentDescription="@string/txt_email_description"
                style="@style/FormTextView"
                android:text="pedro.lopes@al.infnet.edu.br" />

        </LinearLayout>
    </LinearLayout>

</FrameLayout>