<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".CadastroActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:text="@string/titleCadastro"
        android:layout_above="@id/wrapCadastro"/>

    <RelativeLayout
        android:id="@+id/wrapCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:padding="20dp">

        <EditText
            android:id="@+id/edtNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:hint="@string/hintName"
            android:inputType="textCapWords|textPersonName"
            android:textAlignment="center" />


        <EditText
            android:id="@+id/edtCpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtNome"
            android:hint="@string/hintCPF"
            android:maxLength="14"
            android:inputType="text|number"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btnCadastrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtCpf"
            android:layout_centerHorizontal="true"
            android:text="@string/btnTitleCadastrar" />

    </RelativeLayout>

</RelativeLayout>